--- a/server/package.json
+++ b/server/package.json
@@ -4,16 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start-watch": "nodemon server"
   },
-  "keywords": [],
+  "keywords": [], 
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "mongoose": "^5.2.9",
-    "morgan": "^1.9.0",
+    "morgan": "^1.9.0"
+  },
+  "devDependencies": {
     "nodemon": "^1.18.4"
   }
 }
